--- a/pom.xml
+++ b/pom.xml
@@ -28,32 +28,38 @@
 			<artifactId>mybatis-generator-core</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>org.mybatis</groupId>
+			<artifactId>mybatis</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.hibernate.validator</groupId>
 			<artifactId>hibernate-validator</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>com.squareup</groupId>
+			<artifactId>javapoet</artifactId>
+			<version>1.10.0</version>
+		</dependency>
+		<dependency>
 			<groupId>org.fintx</groupId>
 			<artifactId>fintx-common</artifactId>
 			<version>${parent.version}</version>
 		</dependency>
-		<dependency>
+		<!-- dependency>
 			<groupId>org.fintx</groupId>
 			<artifactId>fintx-framework</artifactId>
 			<version>${parent.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.mybatis</groupId>
-			<artifactId>mybatis</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>javax</groupId>
-			<artifactId>javaee-api</artifactId>
-			<version>8.0</version>
-			<scope>provided</scope>
-		</dependency>
+		</dependency>-->
+		
+
+
 	</dependencies>
 </project>
